[gd_scene load_steps=2 format=3 uid="uid://cy0nyxv7w2x37"]

[ext_resource type="Script" path="res://Scene/intro.gd" id="1_q23rf"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q23rf")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.5
offset_top = -322.5
offset_right = 574.5
offset_bottom = 322.5
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="MenuButton" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
disabled = true
text = "Start"
icon_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 184.0
offset_right = 432.0
offset_bottom = 224.0
scale = Vector2(10.32, 1.48)
color = Color(1, 1, 1, 0.588235)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 189.0
offset_right = 798.0
offset_bottom = 239.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 115.0
offset_right = 745.0
offset_bottom = 165.0

[connection signal="pressed" from="BoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
